fix: preloader visibility

--- a/src/components/Header/HeaderComponent.css
+++ b/src/components/Header/HeaderComponent.css
@@ -33,11 +33,19 @@
     justify-self: end;
     background-size: contain;
     border-radius: 100%;
+    background: none;
+}
+
+.cont {
+    position: relative;
+    width: 5rem;
+    height: 5rem;
     border: .25rem solid #FFD27C;
+    border-radius: 100%;
     box-shadow: 0 5px 5px rgba(0, 0, 0, .25);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .header {
         grid-template-columns: 1fr;
         justify-items: center;
